# assistant_to_the_assistant

./: .gitignore  IMPROVEMENTS.md  INFRASTRUCTURE_INDEXING.md  LICENSE  PROMPT_CONSTRUCTION.md  README.md  __init__.py  example_usage.py  generated_prompt.txt  main.py  pyproject.toml  requirements.txt
entry_point/: __init__.py  api.py
evals/: EVAL_DESIGN.md  README.md  __init__.py  test_etl_scenario.py
evals/etl_scenario/: business_context.yaml  feature_spec.yaml  infrastructure.tf  infrastructure.yaml
evals/etl_scenario/mock_codebase/: README.md  requirements.txt
examples/: README.md  agent_guidelines.yaml  business_goals.yaml  feature_spec.yaml  system_description.yaml
project_indexer/: __init__.py  business_context_indexer.py  indexer.py  infrastructure_indexer.py
project_resources/: resource_manager.py
prompt_construction/: context_selector.py  model_formatters.py  prompt_builder.py  prompt_classifier.py  prompt_optimizer.py
src/assistant_to_the_assistant/: config.py
src/assistant_to_the_assistant/entry_point/: __init__.py  cli.py
src/assistant_to_the_assistant/project_indexer/: __init__.py  business_context_indexer.py  codebase_analyzer.py  indexer.py  infrastructure_indexer.py  infrastructure_parsers.py  repository_crawler.py
src/assistant_to_the_assistant/project_resources/: __init__.py  resource_manager.py  storage.py
src/assistant_to_the_assistant/prompt_construction/: __init__.py  context_selector.py  model_formatters.py  prompt_builder.py  (+2 more)
types/: __init__.py  components.py  prompt_artifacts.py
utils/: __init__.py  logging_config.py
(+18 files in other folders)
