[project]
name = "assistant-to-the-assistant"
version = "0.1.0"
description = "Low code LLM assisted software development framework"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


